add_subdirectory( de )
add_subdirectory( el )
add_subdirectory( es )
add_subdirectory( et )
add_subdirectory( fr )
add_subdirectory( hu )
add_subdirectory( it )
add_subdirectory( nb )
add_subdirectory( nl )
add_subdirectory( nn )
add_subdirectory( pl )
add_subdirectory( pt_BR )
add_subdirectory( ro )
add_subdirectory( ru )
add_subdirectory( sl )
add_subdirectory( tr )
add_subdirectory( zh_CN )
